# direnv-backup

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  PKGBUILD  PKGBUILD.template  README.md  WIP  bin.py  config.json  container_config.json  direnv-backup.git  docker-compose.yml  pyproject.toml  setup.cfg  setup.py  test.sh
PKGBUILD/: PKGBUILD  PKGBUILD.template
PKGBUILD_files/: PKGBUILD  build.sh  install.sh
devex/: docs.py  exceptions.py  git.py  pkgbuild.py  pyproject.py  semver.py  systemd.py
devex/cli/: assert_docs_are_up_to_date.py  assert_pkgbuild_status.py  update_pkgbuild.py
direnv_backup/: archive.py  backup.py  config.py  encrypt.py  io.py  logging.py  restore.py  types.py
direnv_backup/cli/: backup.py  restore.py
docs/: development.md
requirements/: dev.in  dev.txt
scripts/: bump.py  generate_pkgbuild.sh  push_pkgbuild_to_local_aur_repo.py  update_pkgbuild.py
scripts/in_container/: build.sh  install_pkgbuild_from_branch.sh  run_happy_path.sh  test_pkgbuild_file.sh
scripts/in_container/helpers/: add_gpg_key.sh  backup.sh  delete_all_direnv_files.sh  (+3 more)
src/: archive.py  config.py  direnv-backup.git  encrypt.py  io.py  lib.py
src/cli/: backup.py  restore.py
systemd/: direnv-backup.service  direnv-backup.timer
tests/: conftest.py  precommit-tests.sh  test_backup_restore.py  test_bin.py  test_build_wheel.py  test_config.py
tests/cli/: test_backup.py  test_restore.py
tests/devex/: test_update_pkgbuild.py
tests/helpers/: config.py  diff.py  direnv.py  docker.py  environment.py  gpg.py
tests/scripts/: test_bump.py
