[project]
name = "direnv_backup"
version = "0.1.1"
authors = [
  { name="David Torralba Goitia", email="david.torralba.goitia@gmail.com" },
]
description = "Tool to backup/restore direnv files with optional encryption."
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    # "License :: OSI Approved :: MIT License",
    # "Operating System :: OS Independent",
]

# [project.urls]
# "Homepage" = "https://github.com/pypa/sampleproject"
# "Bug Tracker" = "https://github.com/pypa/sampleproject/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
direnv-backup = "direnv_backup.cli.backup:main"
direnv-restore = "direnv_backup.cli.restore:main"
